# todo-app

backend/: Cargo.toml
backend/.sqlx/: query-3bbeec34f9bc1b61ac89250c78acaae7c63fe9b3898c4f66deb5291fc7dcd23f.json
backend/src/: main.rs
backend/src/api/: todo_routes.rs
backend/src/db/: mod.rs  todo_db.rs
backend/src/handlers/: todo.rs
backend/src/models/: todo_item.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  UserProfile.tsx  main.tsx
frontend/src/components/: TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
frontend/src/services/: todoApi.ts
frontend/src/types/: todo.ts
