[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
dotenv = "0.15"  # For managing environment variables (optional, but useful for storing DB credentials)
actix-web = "4"
actix-cors = "0.7"
env_logger = "0.11.5"
log = "0.4"